analisis, integración componentes

--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,22 @@
 {
-    "name": "KISS-ORM-DEMO",
-    "description": "demo de uso KISS-ORM",
-    "type": "project",
-    "prefer-stable": false,
-    "minimum-stability":"dev",
-    "require": {
-        "levitarmouse/kiss-orm": "1.0.*"
+    "name": "levitarmouse/kiss_orm",
+    "description": "Active record ORM",
+    "type": "library",
+    "require":{
+        "php" : "^5.5 || ^7.0",
+        "levitarmouse/kiss-orm": "1.1.*"
     },
     "authors": [
         {
-            "name": "Gabriel",
+            "name": "Gabriel Prieto",
             "email": "levitarmouse@gmail.com"
         }
-    ]
+    ],
+    "scripts": {
+        "post-update-cmd": [],
+        "post-package-install": [],
+        "post-install-cmd": [],
+        "post-autoload-dump": [],
+        "post-create-project-cmd": []
+    }
 }
