--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,6 @@
+copy.src.files=false
+copy.src.on.open=false
+copy.src.target=
 index.file=index.php
-url=http://localhost/html/working_copies/levitarmouse/KISS-ORM-DEMO/
+run.as=LOCAL
+url=http://localhost/ormdemo/
