--- a/tables.ini
+++ b/tables.ini
@@ -1,3 +1,7 @@
 [tables]
 ;tableName = ClassName
 users= User
+entities= Entity
+categories= Category
+issuers= Issuer
+sm_organizations= Organization
