analisis, integración componentes

--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,13 @@
         }
     ],
     "scripts": {
-        "post-update-cmd": ["php -r \"shell_exec('mkdir -p config/kiss_orm');\"",
-                                 "php -r \"shell_exec('cp ./vendor/levitarmouse/kiss_orm/config/database.ini ./config/kiss_orm');\"",
+        "post-update-cmd": ["php -r \"shell_exec('mkdir -p config/');\"",
+                                 "php -r \"shell_exec('cp ./vendor/levitarmouse/kiss_orm/config/database.ini ./config/');\"",
                                  "php -r \"shell_exec('ln -s ./vendor/levitarmouse/kiss_orm/kissGen.php');\"", ""],
         "post-package-install": [],
-        "post-install-cmd": [],
+        "post-install-cmd": ["php -r \"shell_exec('mkdir -p config/');\"",
+                                 "php -r \"shell_exec('cp ./vendor/levitarmouse/kiss_orm/config/database.ini ./config/');\"",
+                                 "php -r \"shell_exec('ln -s ./vendor/levitarmouse/kiss_orm/kissGen.php');\"", ""],
         "post-autoload-dump": [],
         "post-create-project-cmd": []
     }
