--- a/composer.json
+++ b/composer.json
@@ -25,14 +25,14 @@
     ],
     "scripts": {
         "post-update-cmd": ["php -r \"shell_exec('mkdir -p config/');\"",
-                            "php -r \"shell_exec('ln -s ./vendor/levitarmouse/kiss_orm/config/database.ini ./config/database.ini');\"",
-                            "php -r \"shell_exec('ln -s ./vendor/levitarmouse/kiss_orm/tables.ini');\"",
-                            "php -r \"shell_exec('ln -s ./vendor/levitarmouse/kiss_orm/kissGen.php');\"", ""],
-        "post-install-cmd": ["php -r \"shell_exec('mkdir -p config/');\"",
-                             "php -r \"shell_exec('ln -s ./vendor/levitarmouse/kiss_orm/config/database.ini ./config/database.ini');\"",
-                             "php -r \"shell_exec('ln -s ./vendor/levitarmouse/kiss_orm/tables.ini');\"",
-                             "php -r \"shell_exec('ln -s ./vendor/levitarmouse/kiss_orm/kissGen.php');\"", ""],
+                            "php -r \"shell_exec('cp ./vendor/levitarmouse/kiss_orm/config/database.ini ./config/');\"",
+                            "php -r \"shell_exec('cp ./vendor/levitarmouse/kiss_orm/tables.ini .');\"",
+                            "php -r \"shell_exec('cp ./vendor/levitarmouse/kiss_orm/kissGen.php .');\"", ""],
         "post-package-install": [],
+        "post-install-cmd": ["php -r \"shell_exec('mkdir -p config/');\"",
+                             "php -r \"shell_exec('cp ./vendor/levitarmouse/kiss_orm/config/database.ini ./config/');\"",
+                             "php -r \"shell_exec('cp ./vendor/levitarmouse/kiss_orm/tables.ini .');\"",
+                             "php -r \"shell_exec('cp ./vendor/levitarmouse/kiss_orm/kissGen.php .');\"", ""],
         "post-autoload-dump": [],
         "post-create-project-cmd": []
     }
