Pruebas integración !preAlpha

--- a/composer.json
+++ b/composer.json
@@ -22,14 +22,14 @@
     ],
     "scripts": {
         "post-update-cmd":  ["php -r \"shell_exec('mkdir -p config/kissorm');\"",
-                             "php -r \"shell_exec('ln -s ./vendor/levitarmouse/kiss_orm/tables.ini .');\"",
+                             "php -r \"shell_exec('cp -rp ./vendor/levitarmouse/kiss_orm/tables.ini.dist ./tables.ini');\"",
                              "php -r \"shell_exec('ln -s ./vendor/levitarmouse/kiss_orm/kissGen.php .');\"",
                              "php -r \"shell_exec('cd ./config/kissorm/; ln -s ../../vendor/levitarmouse/kiss_orm/config/Bootstrap.php .');\"",
-                             "php -r \"shell_exec('cd ./config/kissorm/; ln -s ../../vendor/levitarmouse/kiss_orm/config/database.ini .');\"",
+                             "php -r \"shell_exec('cd ./config/kissorm/; cp -rp ../../vendor/levitarmouse/kiss_orm/config/database.ini.dist ./database.ini');\"",
                              ""],
-        "post-package-install": [],
-        "post-install-cmd": [],
-        "post-autoload-dump": [],
-        "post-create-project-cmd": []
+        "post-package-install": ["echo 'pasó por aca1';"],
+        "post-install-cmd": ["echo 'pasó por aca2';"],
+        "post-autoload-dump": ["echo 'pasó por aca3';"],
+        "post-create-project-cmd": ["echo 'pasó por aca4';"]
     }
 }
