--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,9 @@
     ],
     "scripts": {
         "post-update-cmd":  ["php -r \"shell_exec('mkdir -p config/kissorm');\"",
-                             "php -r \"shell_exec('cp -rp ./vendor/levitarmouse/kiss_orm/tables.ini.dist ./tables.ini');\"",
-                             "php -r \"shell_exec('ln -s ./vendor/levitarmouse/kiss_orm/kissGen.php .');\"",
-                             "php -r \"shell_exec('cd ./config/kissorm/; ln -s ../../vendor/levitarmouse/kiss_orm/config/Bootstrap.php .');\"",
-                             "php -r \"shell_exec('cd ./config/kissorm/; cp -rp ../../vendor/levitarmouse/kiss_orm/config/database.ini.dist ./database.ini');\"",
+                             "php -r \"shell_exec('cp -rp ./vendor/levitarmouse/kiss_orm/scripts/post_install.sh ./kissorm_post_install.sh');\"",
+                             "php -r \"shell_exec('chmod 0775 ./config/kissorm/post_install.sh');\"",
+                             "php -r \"shell_exec('./post_install.sh');\"",
                              ""],
         "post-package-install": [""],
         "post-install-cmd": [""],
