--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "scripts": {
-        "post-update-cmd":  ["chmod 775 ./kissfrmw_post_install.sh;", "./kissfrmw_post_install.sh;",
+        "post-update-cmd":  ["chmod 775 ./scripts/kissfrmw_post_install.sh;", "./scripts/kissfrmw_post_install.sh;",
                              ""],
         "post-package-install": [""],
         "post-install-cmd": [""],
